--- a/css/tyylit.css
+++ b/css/tyylit.css
@@ -15,6 +15,7 @@
 	
 .button {
 		color: black;
+		margin: 20px;
 }
 .row {
 	color: black;
@@ -23,7 +24,7 @@
 }
 	
 .title {
-	font-size: 100px;
+	font-size: 8vw;
 	text-align: center;
 }
 
@@ -36,15 +37,30 @@
 	color: #A9A9A9;
 }
 	
+body {
+	background: url(img/kalajoki2.jpg);
+	backgroun
+	background-size: cover;
+
+}	
+
 .nav-link:link {
 	color: #000000;
 	transition: 0.5s ;
 }
-	
+
+a {
+	color: black;
+}	
+
+a:hover {
+	color: blue;
+	transition: 0,2;
+}
 
 @media screen and (max-width: 800px) {
 body {
-background-color: #888888;
+
 }
 }
 
@@ -68,7 +84,7 @@ footer {
 }
 	
 .linkkiteksti {
-
+ 	text-shadow: 2px 2px 8px #888888;
 }
 
 .link-pic {
@@ -103,18 +119,7 @@ footer {
 	font-size: 10px;
 }
 
-#yt3 {  
-  margin-top: 10px;
-  margin-bottom: 150px;
-  border: 1px solid;
-  padding: 10px;
-  box-shadow: 5px 5px #888888;
+.cont1 {
+	margin-bottom: 200px;
 }
-
-#taustakuva {
-
-  background: url(img/Veijo_makkarat.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-
-}
+ 
