--- a/css/tyylit.css
+++ b/css/tyylit.css
@@ -6,8 +6,9 @@
   margin-bottom: 10px;
   background-color: #EBEDEF;
   text-align: center;
-
 }
+
+
 
 .container {
 		text-align: center;
@@ -47,6 +48,7 @@ ul li {
 	text-align: center;
 }
 
+
 .nav-link2:hover {
 	color: #A9A9A9;
 }
@@ -57,6 +59,13 @@ ul li {
 	transition: 0.5s ;
 }
 
+@media only screen and (max-width: 600px){
+  .nav-link2 {
+	  font-size: auto;
+	  padding: 0px;
+	  }
+}
+ 
 a {
 	color: black;
 }	
@@ -139,8 +148,3 @@ footer {
 	margin-bottom: 10px;
 }
 
-
-.insta {
-	padding: 25px;
-	margin: 25px;
-}
