--- a/css/tyylit.css
+++ b/css/tyylit.css
@@ -165,6 +165,17 @@ input[type=text]{
   box-sizing: border-box;
 }
 
+input[type=email]{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #5499C7;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
 input[type=submit]:hover {
   background-color: #5499C7;
 }
